# ovcs_ros2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
calibrations/: camera_left_1024x768.yaml  camera_right_1024x768.yaml
launch/: cameras_launch.py  display_launch.py  ovcs_cpu_disparity_pipeline_no_sync.launch.py  ovcs_cpu_rectification_pipeline_no_sync.launch.py  ovcs_cpu_stereo_pipeline.launch.py  ovcs_cpu_stereo_pipeline_no_sync.launch.py  ovcs_perception_launch.py  sim_launch.py
ovcs/: camera_info_manager.py  disparity_image_publisher.py  pi_camera_mono_publisher.py  pi_camera_stereo_publisher.py  pi_camera_synchronized_publisher.py  pi_camera_synchronizer.py  test.py
ovcs_ros2/: __init__.py  pi_camera_synchronizer.py
urdf/: colors.xacro
urdf/test/: simple.urdf  test.urdf
urdf/traxxas/: robot.urdf.xacro
